[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=2]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Textures_v2/Gallery/buttongallery.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/Gallery/background_gallery.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/Gallery/buttongallery_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Gallery/buttongallery_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/Gallery/frame_gallery_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/Gallery/frame_gallery_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/images/fullscreen scenes/XariCG001.png" type="Texture" id=10]
[ext_resource path="res://gui_modules/Universal/Scripts/Gallery.gd" type="Script" id=11]
[ext_resource path="res://src/scenes/ClosingPanel.gd" type="Script" id=12]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainBig.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/Textures_v2/Gallery/button_return.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/Gallery/button_return_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/Gallery/frame_gallery.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/Gallery/button_return_hover.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/JOB_MODULE/icon_question_small.png" type="Texture" id=18]
[ext_resource path="res://assets/Fonts_v2/FontThemes/NOTO_SANS_Regular_24px.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/Textures_v2/Gallery/icon_page_default.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/Gallery/icon_page_hover.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/Gallery/icon_page_pressed.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[node name="Gallery" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_horizontal_guides_": [ 153.037 ],
"_edit_vertical_guides_": [ 960.151, 74.0, 1845.74 ]
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 0
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 1 )
text = "GALLERYNAME"
align = 1
valign = 1

[node name="StoryButton" type="TextureButton" parent="."]
margin_left = 757.751
margin_top = 84.0
margin_right = 953.751
margin_bottom = 134.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="StoryButton"]
margin_right = 196.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 2 )
text = "GALLERYSTORY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonoButton" type="TextureButton" parent="."]
margin_left = 545.751
margin_top = 84.0
margin_right = 741.751
margin_bottom = 134.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="MonoButton"]
margin_right = 196.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 2 )
text = "GALLERYMONO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EroButton" type="TextureButton" parent="."]
margin_left = 966.466
margin_top = 84.0
margin_right = 1162.47
margin_bottom = 134.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="EroButton"]
margin_right = 196.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "GALLERYERO"
align = 1
valign = 1

[node name="CharButton" type="TextureButton" parent="."]
margin_left = 1182.47
margin_top = 84.0
margin_right = 1378.47
margin_bottom = 134.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="CharButton"]
margin_right = 196.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "GALLERYCHAR"
align = 1
valign = 1

[node name="SceneButton" type="TextureButton" parent="."]
margin_left = 1624.23
margin_top = 81.7551
margin_right = 1820.23
margin_bottom = 131.755
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SceneButton"]
margin_right = 196.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "GALLERYSCENES"
align = 1
valign = 1

[node name="Pagination" type="HBoxContainer" parent="."]
margin_left = 130.0
margin_top = 153.0
margin_right = 1617.0
margin_bottom = 207.0
custom_constants/separation = 10

[node name="Button" type="TextureButton" parent="Pagination"]
visible = false
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 52, 52 )
theme = ExtResource( 2 )
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 22 )

[node name="Label" type="Label" parent="Pagination/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 20 )
text = "1"
align = 1

[node name="ImageContainer" type="GridContainer" parent="."]
margin_left = 74.0
margin_top = 240.0
margin_right = 1846.0
margin_bottom = 1004.0
custom_constants/hseparation = 28
columns = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="TextureButton" parent="ImageContainer"]
visible = false
margin_right = 422.0
margin_bottom = 238.0
rect_min_size = Vector2( 422, 238 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Image" type="TextureRect" parent="ImageContainer/Button"]
anchor_left = 0.045
anchor_top = 0.063
anchor_right = 0.045
anchor_bottom = 0.063
margin_left = 0.00999832
margin_top = 0.00599957
margin_right = 386.01
margin_bottom = 210.006
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuestionMark" type="TextureRect" parent="ImageContainer/Button"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -73.0
margin_right = -32.0
margin_bottom = -27.0
texture = ExtResource( 18 )

[node name="SceneName" type="Label" parent="ImageContainer/Button"]
visible = false
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Name of Scene"
align = 1
valign = 1

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 850.0
margin_top = 1000.0
margin_right = 1070.0
margin_bottom = 1058.0
theme = ExtResource( 2 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 17 )

[node name="Label" type="Label" parent="CloseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 4.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 13 )
text = "GALLERYRETURN"
align = 1
valign = 1

[node name="ResetProgress" type="TextureButton" parent="."]
margin_left = 1630.0
margin_top = 1000.0
margin_right = 1826.0
margin_bottom = 1050.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ResetProgress"]
margin_right = 195.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 3 )
text = "GALLERYRESETBUTTON"
align = 1
clip_text = true

[node name="FullScreenImage" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 0
expand = true
stretch_mode = 7
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="curtain" type="ColorRect" parent="FullScreenImage"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.631373 )

[node name="mini_image" type="TextureRect" parent="FullScreenImage"]
margin_left = 303.0
margin_top = 152.0
margin_right = 1627.0
margin_bottom = 897.0
mouse_filter = 2
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ResetProgress" to="." method="_on_ResetProgress_pressed"]
